@@ -1,37 +1,38 @@
 package com.ultreon.devices.entity;
 
-import com.ultreon.devices.init.DeviceEntities;
+import com.ultreon.devices.init.ModEntities;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientGamePacketListener;
 import net.minecraft.network.protocol.game.ClientboundAddEntityPacket;
+import net.minecraft.network.syncher.SynchedEntityData;
+import net.minecraft.server.level.ServerEntity;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.AABB;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
-public class SeatEntity extends Entity
-{
+public class SeatEntity extends Entity {
     private double yOffset;
     private BlockPos blockPos;
-    public SeatEntity(EntityType<SeatEntity> type, Level worldIn)
-    {
+
+    public SeatEntity(EntityType<SeatEntity> type, Level worldIn) {
         super(type, worldIn);
         this.setBoundingBox(new AABB(0.001F, 0.001F, 0.001F, -0.001F, -0.001F, -0.001F));
         this.setInvisible(true);
     }
 
     @Override
-    protected float getEyeHeight(Pose pose, EntityDimensions dimensions) {
+    public double getEyeY() {
         return 0;
     }
 
-    public SeatEntity(Level worldIn, BlockPos pos, double yOffset)
-    {
-        this(DeviceEntities.SEAT.get(), worldIn);
+    public SeatEntity(Level worldIn, BlockPos pos, double yOffset) {
+        this(ModEntities.SEAT.get(), worldIn);
         this.setPos(pos.getX() + 0.5, pos.getY() + yOffset, pos.getZ() + 0.5);
         this.blockPos = pos;
     }
@@ -46,41 +47,28 @@ public class SeatEntity extends Entity
         this.setPos(pos.getX() + 0.5, pos.getY() + yOffset, pos.getZ() + 0.5);
     }
 
-
-
-//    @Override
-//    protected boolean shouldSetPosAfterLoading()
-//    {
-//        return false;
-//    }
-
     @Override
-    protected void defineSynchedData() {
+    protected void defineSynchedData(SynchedEntityData.Builder builder) {
+
     }
 
     @Override
-    public void tick()
-    {
-        if(!this.level().isClientSide && (blockPos == null || !this.hasExactlyOnePlayerPassenger() || this.level().isEmptyBlock(blockPos)))
-        {
+    public void tick() {
+        if (!this.level().isClientSide && (blockPos == null || !this.hasExactlyOnePlayerPassenger() || this.level().isEmptyBlock(blockPos))) {
             this.kill();
         }
     }
 
 
-    public LivingEntity getControllingPassenger()
-    {
+    public LivingEntity getControllingPassenger() {
         List<Entity> list = this.getPassengers();
-        return list.isEmpty() ? null : list.get(0) instanceof LivingEntity livingEntity ? livingEntity : null;
+        return list.isEmpty() ? null : list.getFirst() instanceof LivingEntity livingEntity ? livingEntity : null;
     }
 
     @Override
-    public Packet<ClientGamePacketListener> getAddEntityPacket() {
-        return new ClientboundAddEntityPacket(this);
+    public @NotNull Packet<ClientGamePacketListener> getAddEntityPacket(ServerEntity serverEntity) {
+        return new ClientboundAddEntityPacket(this, serverEntity);
     }
-
-//    @Override
-//    protected void.json init() {}
 
     @Override
     protected void readAdditionalSaveData(CompoundTag compound) {
